# se-task1

./: .gitignore  CMakeLists.txt  Makefile  generator.cpp  kasa.cc  regex.cc  sand.cc  some_reqs.txt
tests/: example.err  example.in  example.out
